# claude-howto-chinese

./: .gitignore  .pre-commit-config.yaml  CATALOG.md  CATALOG.zh-CN.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  INDEX.md  INDEX.zh-CN.md  LEARNING-ROADMAP.md  LEARNING-ROADMAP.zh-CN.md  QUICK_REFERENCE.md  QUICK_REFERENCE.zh-CN.md  README.md  README.zh-CN.md  RELEASE_NOTES.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  STYLE_GUIDE.md  STYLE_GUIDE.zh-CN.md  claude_concepts_guide.md  claude_concepts_guide.zh-CN.md  clean-code-rules.md  clean-code-rules.zh-CN.md  resources.md  resources.zh-CN.md
.github/: SECURITY_REPORTING.zh-CN.md  TESTING.zh-CN.md  pull_request_template.zh-CN.md
01-slash-commands/: README.md  README.zh-CN.md  commit.md  commit.zh-CN.md  doc-refactor.md  doc-refactor.zh-CN.md  generate-api-docs.md  generate-api-docs.zh-CN.md  optimize.md  optimize.zh-CN.md  pr.md  pr.zh-CN.md  push-all.md  push-all.zh-CN.md  setup-ci-cd.md  setup-ci-cd.zh-CN.md  unit-test-expand.md  unit-test-expand.zh-CN.md
02-memory/: README.md  README.zh-CN.md  directory-api-CLAUDE.md  directory-api-CLAUDE.zh-CN.md  personal-CLAUDE.md  personal-CLAUDE.zh-CN.md  project-CLAUDE.md  project-CLAUDE.zh-CN.md
03-skills/: README.md  README.zh-CN.md
04-subagents/: README.md  README.zh-CN.md  clean-code-reviewer.md  clean-code-reviewer.zh-CN.md  code-reviewer.md  code-reviewer.zh-CN.md  data-scientist.md  data-scientist.zh-CN.md  debugger.md  debugger.zh-CN.md  documentation-writer.md  documentation-writer.zh-CN.md  implementation-agent.md  implementation-agent.zh-CN.md  performance-optimizer.md  secure-reviewer.md  secure-reviewer.zh-CN.md  test-engineer.md  test-engineer.zh-CN.md
05-mcp/: README.md  README.zh-CN.md
06-hooks/: README.md  README.zh-CN.md  dependency-check.sh  pre-tool-check.sh  session-end.sh
07-plugins/: README.md  README.zh-CN.md
08-checkpoints/: README.md  README.zh-CN.md  checkpoint-examples.md  checkpoint-examples.zh-CN.md
09-advanced-features/: README.md  README.zh-CN.md  config-examples.json  planning-mode-examples.md  planning-mode-examples.zh-CN.md
10-cli/: README.md  README.zh-CN.md
docs/: ROADMAP-20260401.zh-CN.md  TASKS-20260401.zh-CN.md
ja/: CATALOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INDEX.md  LEARNING-ROADMAP.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  SECURITY.md  STYLE_GUIDE.md  TRANSLATION_NOTES.md  claude_concepts_guide.md  clean-code-rules.md  resources.md
local-progress/: index.html
prompts/: remotion-video.zh-CN.md
resources/: DESIGN-SYSTEM.zh-CN.md  QUICK-START.zh-CN.md  README.zh-CN.md
scripts/: README.zh-CN.md  build_epub.py  check_cross_references.py  check_links.py  check_markdown_rendering.py  pyproject.toml  requirements-dev.txt  requirements.txt  sync_translations.py
scripts/tests/: test_build_epub.py  test_check_cross_references.py  test_check_markdown_rendering.py
uk/: CATALOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INDEX.md  LEARNING-ROADMAP.md  LICENSE  QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  SECURITY.md  STYLE_GUIDE.md  TRANSLATION_NOTES.md  TRANSLATION_QUEUE.md  claude_concepts_guide.md  clean-code-rules.md  resources.md
vi/: CATALOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INDEX.md  LEARNING-ROADMAP.md  LICENSE  README.md  (+8 more)
(+430 files in other folders)
